--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Dleng</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" />
     <script src="assets/js/fontawesome.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
   </head>
