adding basic head seo title and tags to all pages

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Dleng</title>
+    <title>DLENG Movies Website</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" />
     <script src="assets/js/fontawesome.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
+    <meta
+      name="description"
+      content="DLENG is contain of movies list with reviews, trailer, details and many other usefull informations"
+    />
+    <meta
+      name="keywords"
+      content="Movies, Reviews, Actors, Actresses, Photos, User Ratings, Synopsis, Trailers, Teasers, Credits, Cast"
+    />
+    <meta name="robots" content="index,follow" />
   </head>
   <body>
     <app-root></app-root>
